--- a/testSwipeGestures.html
+++ b/testSwipeGestures.html
@@ -40,7 +40,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-				<span class='label suite-start-time'>30-Jun-2023, 7:03:43 pm</span>
+				<span class='label suite-start-time'>30-Jun-2023, 7:36:29 pm</span>
 			</a>
 			<a href='#!'>
 				<span class='label'>v3.0.1</span>
@@ -127,7 +127,7 @@
 					<canvas id='child-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span><span class='strong'>6</span> step(s) passed</span>
+					<span><span class='strong'>8</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
 					<span class='strong'>0</span> step(s) failed, <span class='strong'>2</span> others
@@ -148,14 +148,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>testSwipeGestures</span>
-						<span class='test-time'>30-Jun-2023, 7:03:43 pm</span>
+						<span class='test-time'>30-Jun-2023, 7:36:30 pm</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>30-Jun-2023, 7:03:43 pm</span>
-	<span class='label end-time'>30-Jun-2023, 7:04:26 pm</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 43s+556ms</span>
+	<span class='label start-time'>30-Jun-2023, 7:36:30 pm</span>
+	<span class='label end-time'>30-Jun-2023, 7:37:13 pm</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 43s+218ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -169,42 +169,52 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:04:07 pm</td>
+					<td class='timestamp'>7:36:52 pm</td>
 					<td class='step-details'>Test Started</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:04:14 pm</td>
-					<td class='step-details'>View Option Clicked</td>
+					<td class='timestamp'>7:36:59 pm</td>
+					<td class='step-details'>Views Option Displayed</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:04:15 pm</td>
+					<td class='timestamp'>7:37:00 pm</td>
+					<td class='step-details'>ViewsOption clicked</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>7:37:01 pm</td>
 					<td class='step-details'>Down Swipe Worked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:04:16 pm</td>
+					<td class='timestamp'>7:37:02 pm</td>
 					<td class='step-details'>Up Swipe Worked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:04:18 pm</td>
+					<td class='timestamp'>7:37:04 pm</td>
 					<td class='step-details'>Gallery Option Displayed and Clicked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:04:19 pm</td>
+					<td class='timestamp'>7:37:05 pm</td>
 					<td class='step-details'>Photos Option Displayed and Clicked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:04:21 pm</td>
-					<td class='step-details'>Successfully Photo was Moved to Left</td>
+					<td class='timestamp'>7:37:05 pm</td>
+					<td class='step-details'>BeforeSwipe Screenshot Taken</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>7:37:08 pm</td>
+					<td class='step-details'>AfterSwipe Screenshot Taken</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:04:26 pm</td>
+					<td class='timestamp'>7:37:13 pm</td>
 					<td class='step-details'>Test Completed</td>
 				</tr>
 			</tbody>
@@ -250,25 +260,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>8</div>
+					<div class='panel-lead'>10</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>30-Jun-2023, 7:03:43 pm</div>
+					<div class='panel-lead'>30-Jun-2023, 7:36:29 pm</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>30-Jun-2023, 7:04:26 pm</div>
+			 		<div class='panel-lead'>30-Jun-2023, 7:37:13 pm</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>43,644ms</div>
+					<div class='panel-lead'>43,305ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -308,7 +318,7 @@
 				skipParent: 0,
 				exceptionsParent: 0,
 				
-				passChild: 6,
+				passChild: 8,
 				failChild: 0,
 				fatalChild: 0,
 				errorChild: 0,
