--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\BuddeesR\AppData\Local\Temp\testng-eclipse-637149426\testng-customsuite.xml</span>
+                    <span>C:\Users\BuddeesR\AppData\Local\Temp\testng-eclipse--1528088351\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="rb.suite.SwipeActionsSuite" class="method navigator-link" hash-for-method="testSwipeGestures">testSwipeGestures</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="rb.suite.RatingBarSuite" class="method navigator-link" hash-for-method="f">f</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">rb.suite.SwipeActionsSuite</span>
+              <span class="class-name">rb.suite.RatingBarSuite</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testSwipeGestures">
-                  </a> <!-- testSwipeGestures -->
-                  <span class="method-name">testSwipeGestures</span>
+                  <a name="f">
+                  </a> <!-- f -->
+                  <span class="method-name">f</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\BuddeesR\AppData\Local\Temp\testng-eclipse-637149426\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\BuddeesR\AppData\Local\Temp\testng-eclipse--1528088351\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;rb.suite.SwipeActionsSuite&quot;/&gt;
+      &lt;class name=&quot;rb.suite.RatingBarSuite&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testSwipeGestures')
-data.setCell(0, 2, 'rb.suite.SwipeActionsSuite')
-data.setCell(0, 3, 21298);
+data.setCell(0, 1, 'f')
+data.setCell(0, 2, 'rb.suite.RatingBarSuite')
+data.setCell(0, 3, 15272);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,26 +220,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">rb.suite.SwipeActionsSuite</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">rb.suite.RatingBarSuite</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
-              <div class="configuration-method before">
+              <div class="configuration-test before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">181 ms</span>
-              </div> <!-- configuration-method before -->
+                <span class="method-start">20 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">testSwipeGestures</span>
-                <span class="method-start">23478 ms</span>
+                <span class="method-name">f</span>
+                <span class="method-start">23333 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
+              <div class="configuration-test after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">44782 ms</span>
-              </div> <!-- configuration-method after -->
+                <span class="method-start">38617 ms</span>
+              </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">45041 ms</span>
+                <span class="method-start">42905 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
