--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9bffaa">  <td>23/07/03 14:47:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SwipeActionsSuite.afterMethod()[pri:0, instance:rb.suite.SwipeActionsSuite@194fad1]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@90567568</td>   <td></td> </tr>
-<tr bgcolor="9bffaa">  <td>23/07/03 14:47:35</td>   <td>258</td> <td title="&lt;&lt;SwipeActionsSuite.afterSuite()[pri:0, instance:rb.suite.SwipeActionsSuite@194fad1]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@90567568</td>   <td></td> </tr>
-<tr bgcolor="9bffaa">  <td>23/07/03 14:46:50</td>   <td>-44602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SwipeActionsSuite.beforeMethod()[pri:0, instance:rb.suite.SwipeActionsSuite@194fad1]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@90567568</td>   <td></td> </tr>
-<tr bgcolor="9bffaa">  <td>23/07/03 14:46:50</td>   <td>-44775</td> <td title="&gt;&gt;SwipeActionsSuite.beforeSuite()[pri:0, instance:rb.suite.SwipeActionsSuite@194fad1]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@90567568</td>   <td></td> </tr>
-<tr bgcolor="9bffaa">  <td>23/07/03 14:47:14</td>   <td>-21305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwipeActionsSuite.testSwipeGestures()[pri:0, instance:rb.suite.SwipeActionsSuite@194fad1]">testSwipeGestures</td> 
-  <td>main@90567568</td>   <td></td> </tr>
+<tr bgcolor="9bffaa">  <td>23/07/04 11:24:36</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;RatingBarSuite.afterMethod()[pri:0, instance:rb.suite.RatingBarSuite@1807e3f6]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159475521</td>   <td></td> </tr>
+<tr bgcolor="9bffaa">  <td>23/07/04 11:24:40</td>   <td>4288</td> <td title="&lt;&lt;RatingBarSuite.afterSuite()[pri:0, instance:rb.suite.RatingBarSuite@1807e3f6]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159475521</td>   <td></td> </tr>
+<tr bgcolor="9bffaa">  <td>23/07/04 11:23:57</td>   <td>-38597</td> <td>&nbsp;</td><td title="&gt;&gt;RatingBarSuite.beforeMethod()[pri:0, instance:rb.suite.RatingBarSuite@1807e3f6]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159475521</td>   <td></td> </tr>
+<tr bgcolor="9bffaa">  <td>23/07/04 11:23:57</td>   <td>-38609</td> <td title="&gt;&gt;RatingBarSuite.beforeSuite()[pri:0, instance:rb.suite.RatingBarSuite@1807e3f6]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159475521</td>   <td></td> </tr>
+<tr bgcolor="9bffaa">  <td>23/07/04 11:24:21</td>   <td>-15285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RatingBarSuite.f()[pri:0, instance:rb.suite.RatingBarSuite@1807e3f6]">f</td> 
+  <td>main@159475521</td>   <td></td> </tr>
 </table>
