Swipe Code Added in Util Class

--- a/testRatingStars.html
+++ b/testRatingStars.html
@@ -40,7 +40,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-				<span class='label suite-start-time'>04-Jul-2023, 11:24:00 am</span>
+				<span class='label suite-start-time'>04-Jul-2023, 1:12:57 pm</span>
 			</a>
 			<a href='#!'>
 				<span class='label'>v3.0.1</span>
@@ -148,14 +148,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>testRatingStars</span>
-						<span class='test-time'>04-Jul-2023, 11:24:00 am</span>
+						<span class='test-time'>04-Jul-2023, 1:12:57 pm</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>04-Jul-2023, 11:24:00 am</span>
-	<span class='label end-time'>04-Jul-2023, 11:24:36 am</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 36s+255ms</span>
+	<span class='label start-time'>04-Jul-2023, 1:12:57 pm</span>
+	<span class='label end-time'>04-Jul-2023, 1:13:34 pm</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 37s+100ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -169,22 +169,22 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:24:21 am</td>
+					<td class='timestamp'>1:13:20 pm</td>
 					<td class='step-details'>Rating Stars Test Started</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:24:27 am</td>
+					<td class='timestamp'>1:13:26 pm</td>
 					<td class='step-details'>Views Option Displayed</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:24:28 am</td>
+					<td class='timestamp'>1:13:27 pm</td>
 					<td class='step-details'>ViewsOption clicked</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:24:36 am</td>
+					<td class='timestamp'>1:13:34 pm</td>
 					<td class='step-details'>Rating Stars Test Completed</td>
 				</tr>
 			</tbody>
@@ -236,19 +236,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>04-Jul-2023, 11:24:00 am</div>
+					<div class='panel-lead'>04-Jul-2023, 1:12:57 pm</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>04-Jul-2023, 11:24:36 am</div>
+			 		<div class='panel-lead'>04-Jul-2023, 1:13:34 pm</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>36,340ms</div>
+					<div class='panel-lead'>37,182ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
